feat: add type hint marker and prepare release 0.1.1
Add py.typed marker file to indicate the package provides type information and
update the build configuration to include it in the wheel. This enables better
type checking for users of the library. Also bump the version number to 0.1.1
for the new release.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "contextual-langdetect"
-version = "0.1.0"
+version = "0.1.1"
 description = "Context-aware language detection with improved accuracy for multilingual documents"
 authors = [
     {name = "Oliver Steele", email = "steele@osteele.com"},
@@ -54,6 +54,7 @@ stubPath = "stubs"
 
 [tool.hatch.build.targets.wheel]
 packages = ["contextual_langdetect"]
+include = ["contextual_langdetect/py.typed"]
 
 [dependency-groups]
 dev = [
