--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -29,5 +29,9 @@ jobs:
       - name: Install just
         run: |
           curl -fsSL https://just.systems/install.sh | bash -s -- --to /usr/local/bin
-      - name: Run just check
+      - name: Run just check (latest Python)
+        if: matrix.python-version == '3.12'
         run: just check
+      - name: Run just test (other Pythons)
+        if: matrix.python-version != '3.12'
+        run: just test
