--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     "Topic :: Text Processing",
     "Topic :: Text Processing :: Linguistic",
 ]
-dependencies = ["fast-langdetect>=0.3.2", "rich>=13.7.0"]
+dependencies = ["fast-langdetect>=0.3.2"]
 requires-python = ">=3.9"
 
 [dependency-groups]
